--- a/index.html
+++ b/index.html
@@ -13,7 +13,8 @@
       <div class="large-6 large-centered">
         <h1>Current Top 5's Best Albums 2013</h1>
         <p>Enter your top 10 best albums of the past year.</p>
-        <p>Write in band name and album name and hit enter to submit an album. If someone else already submitted the same album, that album's score will increase. There's no check on how many you can enter, so try to remember how many you've done and keep it to ten. Honor system guys.</p> 
+        <p>Write in band name and album name and hit enter to submit an album. If someone else already submitted the same album, that album's score will increase. There's no check on how many you can enter, so try to remember how many you've done and keep it to ten. Honor system guys.</p>
+        <p>Also try not to make any mistakes. There's no delete button, so I have to go into the database to make any corrections manually.</p>
         <input type="text" ng-model="bandName" placeholder="Band Name">
         <input type="text" ng-model="albumName" ng-keydown="addAlbum($event)" placeholder="Album Name">
         <table id="messagesDiv">
