fixed column, added version number

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   </head>
   <body ng-controller="MyController">
     <div class="row">
-      <div class="large-6 large-centered">
+      <div class="large-6 large-centered columns">
         <h1>Current Top 5's Best Albums 2013</h1>
         <p>Enter your top 10 best albums of the past year.</p>
         <p>Write in band name and album name and hit enter to submit an album. If someone else already submitted the same album, that album's score will increase. There's no check on how many you can enter, so try to remember how many you've done and keep it to ten. Honor system guys.</p>
@@ -24,6 +24,7 @@
             <td>{{album.score}}</td>
         </table>
       </div>
+      <p><small>v0.3</small></p>
     </div>
     
     <script>
