--- a/index.html
+++ b/index.html
@@ -18,11 +18,26 @@
     <div class="row">
       <div class="large-5 columns">
         <p>Enter your top 10 best albums of the past year.</p>
-        <p>Write in band name and album name and hit enter to submit an album. If someone else already submitted the same album, that album's score will increase. There's no check on how many you can enter, so try to remember how many you've done and keep it to ten. Honor system guys.</p>
-        <p>Also try not to make any mistakes. There's no delete button, so I have to go into the database to make any corrections manually.</p>
+        <p>Directions:</p>
+        <ul>
+          <li>Rank your top 10 favorite albums of 2013</li>
+          <li>Score them so your #1 album gets 10 points, #2 get 9, etc.</li>
+          <li>Enter each album, one at a time with the form below</li>
+          <li>Write in your name, band name, album name, and your score for that album</li>
+          <li>Click "Vote"</li>
+          <li>Keep track of what you voted for and how much</li>
+        </ul>
         <input type="text" ng-model="userName" placeholder="Your Name">
         <input type="text" ng-model="bandName" placeholder="Band Name">
-        <input type="text" ng-model="albumName" ng-keydown="addAlbum($event)" placeholder="Album Name">
+        <input type="text" ng-model="albumName" placeholder="Album Name">
+        <div class="row collapse">
+          <div class="small-9 columns">
+            <input type="number" name="input" ng-model="userScore" min="1" max="10">
+          </div>
+          <div class="small-3 columns">
+            <button class="postfix" ng-click="addAlbum($event)">VOTE!</button>
+          </div>
+        </div>
         <p><small>v0.5.1 - View on <a href="https://github.com/andrewlaskey/top5-albums" title="Top 5 Albums on Github">Github</a></small></p>
       </div>
 
@@ -31,7 +46,7 @@
           <tr>
             <th>Band</th>
             <th>Album</th>
-            <th>Votes</th>
+            <th>Score</th>
             <th>Who Like</th>
           </tr>
           <tr ng-repeat="album in albums | orderBy:'score':true">
@@ -60,23 +75,23 @@
         angularFire(ref, $scope, "albums");
         $scope
         $scope.addAlbum = function(e) {
-          if (e.keyCode != 13) return;
 
           var index = contains($scope.albums, $scope.albumName);
           if ( index >= 0) {
-            $scope.albums[index].score++;
+            $scope.albums[index].score += $scope.userScore;
             $scope.albums[index].listnames += ', ' + $scope.userName;
           } else {
             $scope.albums.push({
               bandName: $scope.bandName,
               albumName: $scope.albumName,
-              score: 1,
+              score: $scope.userScore,
               listnames: $scope.userName
             });  
           }
           
           $scope.bandName = "";
           $scope.albumName = "";
+          $scope.userScore = 1;
         };
       }
     </script>
