--- a/index.html
+++ b/index.html
@@ -18,12 +18,26 @@
     <div class="row">
       <div class="large-5 columns">
         <p>Enter your top 10 best albums of the past year.</p>
-        <p>Write in band name and album name and hit enter to submit an album. If someone else already submitted the same album, that album's score will increase. There's no check on how many you can enter, so try to remember how many you've done and keep it to ten. Honor system guys.</p>
-        <p>Also try not to make any mistakes. There's no delete button, so I have to go into the database to make any corrections manually.</p>
+        <p>Directions:</p>
+        <ul>
+          <li>Rank your top 10 favorite albums of 2013</li>
+          <li><em>The score will be calculated automatically based on rank (Thanks Shahan)</em></li>
+          <li>Write in your name, band name, album name, and its rank for that album</li>
+          <li>Click "Vote"</li>
+          <li>Keep track of what you voted for</li>
+        </ul>
         <input type="text" ng-model="userName" placeholder="Your Name">
         <input type="text" ng-model="bandName" placeholder="Band Name">
-        <input type="text" ng-model="albumName" ng-keydown="addAlbum($event)" placeholder="Album Name">
-        <p><small>v0.5.1 - View on <a href="https://github.com/andrewlaskey/top5-albums" title="Top 5 Albums on Github">Github</a></small></p>
+        <input type="text" ng-model="albumName" placeholder="Album Name">
+        <div class="row collapse">
+          <div class="small-9 columns">
+            <input type="number" name="input" ng-model="userScore" min="1" max="10" placeholder="Rank">
+          </div>
+          <div class="small-3 columns">
+            <button class="postfix" ng-click="addAlbum($event)">VOTE!</button>
+          </div>
+        </div>
+        <p><small>v0.6.3 - View on <a href="https://github.com/andrewlaskey/top5-albums" title="Top 5 Albums on Github">Github</a></small></p>
       </div>
 
       <div class="large-7 columns">
@@ -31,7 +45,7 @@
           <tr>
             <th>Band</th>
             <th>Album</th>
-            <th>Votes</th>
+            <th>Score</th>
             <th>Who Like</th>
           </tr>
           <tr ng-repeat="album in albums | orderBy:'score':true">
@@ -58,25 +72,24 @@
         var ref = new Firebase("https://top5.firebaseIO.com/");
         $scope.albums = [];
         angularFire(ref, $scope, "albums");
-        $scope
         $scope.addAlbum = function(e) {
-          if (e.keyCode != 13) return;
 
           var index = contains($scope.albums, $scope.albumName);
           if ( index >= 0) {
-            $scope.albums[index].score++;
+            $scope.albums[index].score += (11 - $scope.userScore);
             $scope.albums[index].listnames += ', ' + $scope.userName;
           } else {
             $scope.albums.push({
               bandName: $scope.bandName,
               albumName: $scope.albumName,
-              score: 1,
+              score: $scope.userScore,
               listnames: $scope.userName
             });  
           }
           
           $scope.bandName = "";
           $scope.albumName = "";
+          $scope.userScore = "";
         };
       }
     </script>
