--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
             <button class="postfix" ng-click="addAlbum($event)">VOTE!</button>
           </div>
         </div>
-        <p><small>v0.6.4 - View on <a href="https://github.com/andrewlaskey/top5-albums" title="Top 5 Albums on Github">Github</a></small></p>
+        <p><small>v0.6.5 - View on <a href="https://github.com/andrewlaskey/top5-albums" title="Top 5 Albums on Github">Github</a></small></p>
       </div>
 
       <div class="large-7 columns">
@@ -83,7 +83,7 @@
             $scope.albums.push({
               bandName: $scope.bandName,
               albumName: $scope.albumName,
-              score: $scope.userScore,
+              score: (11 - $scope.userScore),
               listnames: $scope.userName
             });  
           }
