--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
         <ul>
           <li>Rank your top 10 favorite albums of 2013</li>
           <li><em>The score will be calculated automatically based on rank (Thanks Shahan)</em></li>
+          <li>Enter each album one at a time in the form below</li>
           <li>Write in your name, band name, album name, and its rank for that album</li>
           <li>Click "Vote"</li>
           <li>Keep track of what you voted for</li>
@@ -37,7 +38,7 @@
             <button class="postfix" ng-click="addAlbum($event)">VOTE!</button>
           </div>
         </div>
-        <p><small>v0.6.3 - View on <a href="https://github.com/andrewlaskey/top5-albums" title="Top 5 Albums on Github">Github</a></small></p>
+        <p><small>v0.6.5 - View on <a href="https://github.com/andrewlaskey/top5-albums" title="Top 5 Albums on Github">Github</a></small></p>
       </div>
 
       <div class="large-7 columns">
@@ -82,7 +83,7 @@
             $scope.albums.push({
               bandName: $scope.bandName,
               albumName: $scope.albumName,
-              score: $scope.userScore,
+              score: (11 - $scope.userScore),
               listnames: $scope.userName
             });  
           }
